name:                minimize
version:             0.1.0.0
license:             LICENSE
author:              Joshua Moerman
copyright:           (c) 2019, Joshua Moerman
build-type:          Simple
cabal-version:       >=1.10

executable minimize
  main-is:         minimize.hs
  other-modules:   Fifo
                 , FileAutomata
                 , FormulaAutomata
                 , Lint
                 , Lmax
                 , RunningExample
  build-depends:   base >= 4.8 && < 5
                 , containers
                 , megaparsec
                 , NLambda >= 1.1
                 , parser-combinators
  default-language: Haskell2010
  ghc-options:      -O2

executable print
  main-is:         print.hs
  other-modules:   Fifo
                 , FileAutomata
                 , FormulaAutomata
                 , Lint
                 , Lmax
                 , RunningExample
  build-depends:   base >= 4.8 && < 5
                 , containers
                 , megaparsec
                 , NLambda >= 1.1
                 , parser-combinators
  default-language: Haskell2010
  ghc-options:      -O2 -Wall
